# freesasa

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile.am  README.md  calc_sasa.c  configure  configure.ac  doxygen.config  example.c  test.c  user.config  vector3.h
.github/workflows/: push.yml
analysis/: commands  cullpdb_pc20_res1.6_R0.25_d130730_chains2117  do_calc.sh  precision.pl  precision.plot  time.plot
analysis/plots/: precision.eps  time.eps
bindings/: Makefile.am  check-python.in  test-python.sh
bindings/python/: cfreesasa.pxd  freesasa.pyx  setup.py  setup.py.in  test.py
doc/: Doxyfile.in  HOWTO_BUILD_WEBPAGES  Makefile  Makefile.am  Makefile.in  decorateHTML.pl  doxy-main.md  doxy_main.md  doxygen-footer.html  doxygen-header.html  geometry.md  manual.tex  prepareHTML.pl
doc/fig/: Makefile  Makefile.am  Makefile.in  lnr_circles.tex  lnr_slice.tex  precision.eps  scaling.eps  threads.eps
doc/man/: freesasa.1.in
rsa/: calc_max_sasa.pl
scripts/: chemcomp2config.pl  config2c.pl
scripts/rsa/: calc_max_sasa.pl
share/: Makefile.am  dssp.config  naccess.config  oons.config  protor.config
src/: Makefile.am  adjacency.c  adjacency.h  atom.c  atom.h  atomclassifier.c  atomclassifier.h  cif.cc  cif.hh  classifier.c  classifier.h  classifier_naccess.c  classifier_oons.c  classifier_protor.c  classifiers.c  classify.c  classify.h  classify_user.c  coord.c  coord.h  example.c  freesasa.c  freesasa.h  freesasa_internal.h  freesasa_json.h  integrate.c  integrate.h  json.c  lexer.c  lexer.h  lexer.l  log.c  main.c  main.cc  nb.c  nb.h  node.c  oons.c  oons.h  parser.c  (+41 more)
tests/: .gitignore  Makefile.am  broken-malloc  broken_malloc.c  libtest  libtest.c  run-test-cli  run-test-cli.sh  static_nb.c  static_sasa_lr.c  static_structure.c  static_verlet.c  statictest  statictest.c  test-cli.in  test-cli.sh  test-cli.sh.in  test.c  test_adjacency.c  test_classifier.c  test_classify.c  test_coord.c  test_freesasa.c  test_hash.c  test_json.c  test_main.c  test_memerr.c  test_nb.c  test_node.c  test_pdb.c  test_result_node.c  test_sasa.c  test_sasalib.c  test_selection.c  test_selector.c  test_static.c  test_structure.c  test_verlet.c  test_verlet_static.c  test_xml.c  (+3 more)
tests/compare-cif-pdb/: .gitignore  AsyncResult.fs  Command.fs  Download.fs  Program.fs  README.md  compare-cif-pdb.fsproj  compare-cif-pdb.sln
tests/data/: 1d3z.cif  1sui.cif  1ubq.cif  2isk.cif  2jo4.cif  3bkr.cif  3gnn.cif  5dx9.cif  5hdn.cif  7cma-assembly1.cif  ProtOr.config  diverse_pdbs_2000.txt  err.config  naccess.config  oons.config  restype.reference  rsa  seq.reference  test.config
